--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Resume Jason Stull</title>
+  <link rel="stylesheet" href="./assets/style.css" </head>
 </head>
+
 <body>
   <header>
-    
+    <div class="images_header">
+      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg"
+        alt="Photo Jason Stull in resume" height="100px" width="100px">
+    </div>
+    <h1>Jason Stull</h1>
+    <span>
+      <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
+      <a class="link_tel" href="tel:+1-999-999-9999">+1-999-999-9999</a>
+      <a href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
+      </a>
+    </span>
   </header>
   <main></main>
 </body>
+
 </html>
