--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1>Jason Stull</h1>
     <span>
       <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
-      <a class="link_tel" href="tel:+1-999-999-9999">+1-999-999-9999</a>
-      <a href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
+      <a class="link-in-header link-tel" href="tel:+1-999-999-9999">+1-999-999-9999</a>
+      <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
       </a>
     </span>
   </header>
