--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <header>
     <div class="images_header">
-      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg"
-        alt="Photo Jason Stull in resume" height="100px" width="100px">
+      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg" alt="Photo Jason Stull in resume" height="100px"
+        width="100px">
     </div>
     <h1>Jason Stull</h1>
     <span>
-      <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
-      <a class="link-in-header link-tel" href="tel:+1-999-999-9999">+1-999-999-9999</a>
+      <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com &#10072</a>
+      <a class="link-in-header" href="tel:+1-999-999-9999">+1-999-999-9999 &#10072</a>
       <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
       </a>
     </span>
