Add info about Jason Stull

--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
     </div>
     <h1>Jason Stull</h1>
     <span>
-      <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com &#10072</a>
-      <a class="link-in-header" href="tel:+1-999-999-9999">+1-999-999-9999 &#10072</a>
+      <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
+      <a class="link-in-header linl-tel" href="tel:+1-999-999-9999">  +1-999-999-9999</a>
       <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
       </a>
     </span>
   </header>
-  <main></main>
+
+  <main>
+    <section>
+<h2 class="info_post">Junior Frontend Developer</h2>
+<p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level position with Company to use
+my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
+    </section>
+    <section>
+      
+    </section>
+    <section></section>
+  </main>
 </body>
 
 </html>
