--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume Jason Stull</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./assets/style.css" </head>
 </head>
 
@@ -18,7 +22,7 @@
     <h1>Jason Stull</h1>
     <span>
       <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
-      <a class="link-in-header linl-tel" href="tel:+1-999-999-9999">  +1-999-999-9999</a>
+      <a class="link-in-header linl-tel" href="tel:+1-999-999-9999"> +1-999-999-9999</a>
       <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
       </a>
     </span>
@@ -26,14 +30,62 @@
 
   <main>
     <section>
-<h2 class="info_post">Junior Frontend Developer</h2>
-<p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level position with Company to use
-my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
+      <h2 class="info_post">Junior Frontend Developer</h2>
+      <p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level
+        position with Company to use
+        my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
     </section>
+
     <section>
-      
+      <h2>Skills</h2>
+      <article>
+        <h3>Tech Stack</h3>
+        <p>Javascript/ES5/ES6, Angular + NGRX, HTML/CSS3, Node.JS/Express/KOA,Bootstrap/JQUERY </p>
+      </article>
+
+      <article>
+        <h3>Education</h3>
+        <ul>
+          <li>
+            <strong>M.S. IN COMPUTER SCIENCE
+            </strong> - University of Texas - Dallas, TX
+          </li>
+          <li>
+            <strong>B.S. in Information Technology
+            </strong> - CUNY Queens College - Flushing, NY
+          </li>
+        </ul>
+      </article>
+
+      <article>
+        <h3>
+          Languages</h3>
+
+        <p>Deutsch - Native, English - Fluent,
+          Spanish - Intermediate.</p>
+      </article>
     </section>
-    <section></section>
+
+    <section>
+      <h2>Experience</h2>
+
+      <article>
+        <h3>Frontend Developer </h3>
+        <p class="experience-date">September 2019</p>
+        <p> Accomplished the development of the company's German website, using Angular, Typescript, NGRX and
+          ngx-translate.
+          Automated system deployment with Docker, Nginx on Amazon Cloud.</p>
+      </article>
+
+      <article>
+        <h3>Frontend Engineer Intern </h3>
+        <p class="experience-date">June 2019 - August 2019</p>
+        <p> Cut the company's site web loading time by 40% by optimizing the SPA bundle size, leading to better user
+          experience.
+          Expanded reach of the website by building RESTful API to support user replies and notifications.</p>
+      </article>
+
+    </section>
   </main>
 </body>
 
