Style index.html

--- a/index.html
+++ b/index.html
@@ -46,21 +46,14 @@
       <article>
         <h3>Education</h3>
         <ul>
-          <li>
-            <strong>M.S. IN COMPUTER SCIENCE
-            </strong> - University of Texas - Dallas, TX
-          </li>
-          <li>
-            <strong>B.S. in Information Technology
-            </strong> - CUNY Queens College - Flushing, NY
-          </li>
+          <li><strong>M.S. IN COMPUTER SCIENCE</strong> - University of Texas - Dallas, TX </li>
+          <li><strong>B.S. in Information Technology </strong> - CUNY Queens College - Flushing, NY</li>
         </ul>
       </article>
 
       <article>
         <h3>
           Languages</h3>
-
         <p>Deutsch - Native, English - Fluent,
           Spanish - Intermediate.</p>
       </article>
