Style index.html

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./assets/style.css" </head>
+  <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
   <header>
     <div class="images_header">
-      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg" alt="Photo Jason Stull in resume" height="100px"
-        width="100px">
+      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg" alt="Photo Jason Stull in resume" height="100"  width="100">
     </div>
     <h1>Jason Stull</h1>
     <span>
