--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 <body>
   <header>
     <div class="images_header">
-      <img src="./assets/images/wepik-export-20230616122145U8h6.jpeg" alt="Photo Jason Stull in resume" height="100"  width="100">
+      <img class="image-resume" src="./assets/images/wepik-export-20230616122145U8h6.jpeg"
+        alt="Photo Jason Stull in resume">
     </div>
     <h1>Jason Stull</h1>
-    <span>
+    <address>
       <a class="link-in-header" href="mailto:jason.stull@sweetcv.com">jason.stull@sweetcv.com</a>
       <a class="link-in-header linl-tel" href="tel:+1-999-999-9999"> +1-999-999-9999</a>
-      <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine
-      </a>
-    </span>
+      <a class="link-in-header" href="https://goo.gl/maps/4mxizYdSo2iC8RjJA" target="_blank">Kyiv, Ukraine</a>
+    </address>
   </header>
 
   <main>
     <section>
-      <h2 class="info_post">Junior Frontend Developer</h2>
+      <h2 class="info-post main-section__header">Junior Frontend Developer</h2>
       <p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level
         position with Company to use
         my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
     </section>
 
     <section>
-      <h2>Skills</h2>
+      <h2 class="main-section__header">Skills</h2>
       <article>
         <h3>Tech Stack</h3>
         <p>Javascript/ES5/ES6, Angular + NGRX, HTML/CSS3, Node.JS/Express/KOA,Bootstrap/JQUERY </p>
@@ -59,24 +59,19 @@
     </section>
 
     <section>
-      <h2>Experience</h2>
+      <h2 class="main-section__header">Experience</h2>
 
       <article>
         <h3>Frontend Developer </h3>
-        <p class="experience-date">September 2019</p>
-        <p> Accomplished the development of the company's German website, using Angular, Typescript, NGRX and
-          ngx-translate.
-          Automated system deployment with Docker, Nginx on Amazon Cloud.</p>
-      </article>
 
-      <article>
-        <h3>Frontend Engineer Intern </h3>
-        <p class="experience-date">June 2019 - August 2019</p>
-        <p> Cut the company's site web loading time by 40% by optimizing the SPA bundle size, leading to better user
-          experience.
-          Expanded reach of the website by building RESTful API to support user replies and notifications.</p>
-      </article>
-
+        <ul>
+          <li>Accomplished the development of the company's German website, using Angular, Typescript, NGRX and
+            ngx-translate.</li>
+          <li>Automated system deployment with Docker, Nginx on Amazon Cloud.</li>
+          <li>Cut the company's site web loading time by 40% by optimizing the SPA bundle size, leading to better user
+            experience.</li>
+          <li>Expanded reach of the website by building RESTful API to support user replies and notifications.</li>
+        </ul>
     </section>
   </main>
 </body>
