--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
   <main>
     <section>
       <h2 class="info-post main-section__header">Junior Frontend Developer</h2>
-      <p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level
-        position with Company to use
-        my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
+      <p>I'm an enthusiastic and detail-oriented <strong>Frontend Software Engineer </strong> seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.</p>
     </section>
 
     <section>
       <h2 class="main-section__header">Skills</h2>
+
       <article>
         <h3>Tech Stack</h3>
         <p>Javascript/ES5/ES6, Angular + NGRX, HTML/CSS3, Node.JS/Express/KOA,Bootstrap/JQUERY </p>
@@ -51,8 +50,7 @@
       </article>
 
       <article>
-        <h3>
-          Languages</h3>
+        <h3> Languages</h3>
         <p>Deutsch - Native, English - Fluent,
           Spanish - Intermediate.</p>
       </article>
@@ -61,7 +59,6 @@
     <section>
       <h2 class="main-section__header">Experience</h2>
 
-      <article>
         <h3>Frontend Developer </h3>
 
         <ul>
